# robot_eye_in_hand_calibration

./: .gitmodules  README.md
eye_in_hand_calibration/: CMakeLists.txt  README.md  package.xml
eye_in_hand_calibration/include/: config.h  eyeHand.h  mkdir.hpp  transformformat.hpp
eye_in_hand_calibration/msg/: Command.msg
eye_in_hand_calibration/parameters/: EyeHandParameter.yml  VarifyPose.yml  out_camera_data.yml  parameter.yml  robot_pose_jaka.txt
eye_in_hand_calibration/parameters/image/: cloud0.ply  cloud1.ply  cloud2.ply  cloud3.ply  cloud4.ply  cloud5.ply  cloud6.ply  cloud7.ply  cloud8.ply  cloud9.ply  robot_pose_jaka_20200422.txt  手眼矩阵-20200422.txt
eye_in_hand_calibration/parameters/input/: imageList.xml  robot_pose_jaka_20200422.txt  robot_pose_sr300.txt  robot_pose_xtion.txt  robot_pose_xtion_ifs.txt
eye_in_hand_calibration/parameters/output/: EyeHandParameter.yml  VarifyPose.yml  out_camera_data.yml
eye_in_hand_calibration/src/: ImageList.bash  RGBD_collector_jaka.cc  calibration.cc  cross.cc  image_collector.cc  image_collector_guided.cc  image_collector_jaka.cc
eye_in_hand_calibration/src/libs/: config.cc  eyeHand.cc
universal_msgs/: CMakeLists.txt  package.xml
universal_msgs/msg/: Ball_Locations.msg  Ball_Locations.msg~  Command.msg  RobotMsg.msg
universal_msgs/src/: config.cpp  helper.cpp  merge4Img.cpp  snooker_recognizer_node.cpp  snooker_recognizer_node.cpp~
universal_msgs/srv/: Aruco_GetHitPose.srv  Aruco_GetPositionInBoard.srv  DetectBall_service_data.srv  GetBallLocation.srv  GetHitBallLocation.srv  SendHitBallLocation.srv  SendHitBallLocationABS.srv
universal_robot_script/: CMakeLists.txt  README.md  package.xml
universal_robot_script/src/: ur_controller.py
