<?xml version="1.0"?>
<package>
	<name>eye_in_hand_calibration</name>
	<version>0.0.0</version>
	<description>The eye_in_hand_calibration package</description>
	<maintainer email="chazqd2007@126.com">ZiqiChai</maintainer>
	<license>MIT</license>
	<author email="chazqd2007@126.com">Ziqi Chai</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>universal_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>universal_msgs</run_depend>
	<run_depend>message_runtime</run_depend>

</package>
